fix: hide add new item button if it does not fit

--- a/src/components/CollapsibleTreeItem/CollapsibleTreeItem.scss
+++ b/src/components/CollapsibleTreeItem/CollapsibleTreeItem.scss
@@ -1,4 +1,5 @@
 $item-height: 20px;
+$item-level-offset: 30;
 
 .item {
     display: flex;
@@ -12,20 +13,26 @@ $item-height: 20px;
         cursor: pointer;
     }
 
-    @for $i from 0 through 10 {
-        &__nesting-level-#{$i} {
-            padding-left: $i * 30px;
-        }
-    }
-
     &:hover {
         background-color: aliceblue;
     }
 }
 
+.item-content {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+    @for $i from 0 through 10 {
+        &__nesting-level-#{$i} {
+            padding-left: $i * $item-level-offset * 1px;
+        }
+    }
+}
+
 .action-button-panel {
+    right: 0;
     display: none;
-    margin-left: 20px;
 
     &__visible {
         display: flex;
